# ownership-responsibility-graph

./: .env.example  .gitignore  Dockerfile  HANDOFF.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample/: asset_emissions.csv  asset_ownership.csv  assets.csv  entities.csv  entity_ownership.csv
docs/: architecture.md  goals_and_features.md
docs/examples/: responsibility_attribution_sample.csv  top_responsible_entities_sample.csv
k8s/: README.md  configmap.yaml  kustomization.yaml  namespace.yaml  secret.yaml
k8s/graph/: analyze-job.yaml  job.yaml
k8s/neo4j/: pvc.yaml  service.yaml  statefulset.yaml
k8s/neo4j-loader/: job.yaml
ownership_graph/: __init__.py  cli.py
ownership_graph/analysis/: __init__.py  attribution.py  hierarchy.py
ownership_graph/export/: __init__.py  neo4j.py  neo4j_runtime.py
ownership_graph/graph/: __init__.py  build.py
ownership_graph/ingest/: __init__.py  loaders.py
ownership_graph/models/: __init__.py  schemas.py
scripts/: build_demo_graph.py  export_neo4j.py  load_neo4j.py  query_neo4j.py  run_analysis.py
tests/: conftest.py  test_attribution.py  test_cli.py  test_graph_export.py  test_hierarchy.py  test_loaders.py  test_neo4j_runtime.py  test_public_safety.py
